Na tabela tb_rastreamento_cidadaos na coluna resultado_rastreamento, se o paciente ainda é suspeito de hipertensao (SUSPEITO_HAS), não deve ser exibido na tabela de hipertensos. deve ser exibido apenas na tabela Suspeitos HAS.
No momento está sendo exibido. Corrija.

--- a/templates/painel-rastreamento-cardiovascular.html
+++ b/templates/painel-rastreamento-cardiovascular.html
@@ -42,6 +42,7 @@
 
     <!-- Não Hipertensos e Suspeitos de HAS -->
     <script src="{{ url_for('static', filename='dashboard_rastreamento_nao_hipertensos.js') }}" defer></script>
+    <script src="{{ url_for('static', filename='dashboard_hipertensos.js') }}" defer></script>
 
     <style>
         body {
