1) Crie na tabela tb_rastreamento_cidadaos uma coluna chamada registrado_pec que vai ser do tipo verdadeiro ou falso. inicialmente vai ser falso. 2) Na tabela no painel de hipertensos, crie uma coluna chamada Registrado no PEC, onde eu vou exibir se já foi registrado ou não no pec e tambem vai ter a opcao deu modificar este status para registrado ou não.

--- a/templates/painel-rastreamento-cardiovascular.html
+++ b/templates/painel-rastreamento-cardiovascular.html
@@ -398,13 +398,14 @@
                                         <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">Equipe</th>
                                         <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">Micro</th>
                                         <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">PA MRPA</th>
-                                        <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">Data</th>
+                                        <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">Classificação</th>
+                                        <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">Registrado PEC</th>
                                         <th class="px-2 py-2 text-center text-[10px] font-semibold text-red-900 uppercase tracking-tight border-b">Ações</th>
                                     </tr>
                                 </thead>
                                 <tbody id="lista-hipertensos">
                                     <tr>
-                                        <td colspan="11" class="px-4 py-8 text-center text-gray-400">
+                                        <td colspan="12" class="px-4 py-8 text-center text-gray-400">
                                             Carregando...
                                         </td>
                                     </tr>
